Clean up code by using new Java 11 APIs (#68)